add backblaze for storage and build

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,12 @@ EMAIL_USER="<YOUR_EMAIL_ADDRESS>"
 GOOGLE_APP_PASSWORD="<YOUR_EMAIL_APP_PASSWORD>"
 EMAIL_FROM_NAME="Memorly"
 
-# Backblaze B2 Configuration
-B2_APPLICATION_KEY_ID="<YOUR_B2_APPLICATION_KEY_ID>"
-B2_APPLICATION_KEY="<YOUR_B2_APPLICATION_KEY>"
-B2_BUCKET_ID="<YOUR_B2_BUCKET_ID>"
-B2_BUCKET_NAME="<YOUR_B2_BUCKET_NAME>"
-B2_DOWNLOAD_URL="<YOUR_B2_DOWNLOAD_URL>"
+# Backblaze B2 Configuration (S3-Compatible)
+B2_KEY_ID="<YOUR_B2_APPLICATION_KEY_ID>"
+B2_APP_KEY="<YOUR_B2_APPLICATION_KEY>"
+B2_BUCKET="<YOUR_B2_BUCKET_NAME>"
+B2_REGION="<YOUR_B2_REGION>"
+B2_ENDPOINT="<YOUR_B2_ENDPOINT>"
+# Example values:
+# B2_REGION="eu-central-003"
+# B2_ENDPOINT="https://s3.eu-central-003.backblazeb2.com"
