--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.917.0",
+    "@google/genai": "^1.27.0",
+    "@socket.io/cluster-adapter": "^0.3.0",
+    "@socket.io/sticky": "^1.0.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -25,6 +28,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0"
